--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
             <div class="header-text">
                 <p>Data Analyst</p>
-                <h1>Hi, I'm <span>Erram Sndeep </span></h1>
+                <h1>Hi, I'm <span>Erram Sandeep </span></h1>
             </div>
         </div>
 
