--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@
             <div class="projects-list">
 
 
-                <a href="https://app.powerbi.com/groups/me/reports/b570ebf3-5f8f-4cde-94ed-e9727742287a/ReportSection">
+                <a href="https://app.powerbi.com/groups/me/reports/b570ebf3-5f8f-4cde-94ed-e9727742287a/ReportSection" target="_blank">
                     <div>
                         <i class="fa-solid fa-chart-simple"></i>
                         <h2> Power Bi</h2>
                         <p> Sales Insights Dashboard</p>
                     </div>
                 </a>
-                <a href="https://public.tableau.com/app/profile/erram.sandeep/viz/NetflixAnalysisDashboard_16857781313380/Dashboard1">
+                <a href="https://public.tableau.com/app/profile/erram.sandeep/viz/NetflixAnalysisDashboard_16857781313380/Dashboard1" target="_blank">
                     <div>
                         <i class="fa-sharp fa-solid fa-chart-pie"></i>
                         <h2>Tableau</h2>
                         <p> Netflix Analysis Dashboard</p>
                     </div>
                 </a>
-                <a href="https://www.kaggle.com/code/erramsandeep/spotify-eda-project">
+                <a href="https://www.kaggle.com/code/erramsandeep/spotify-eda-project" target="_blank">
                     <div>
                         <i class="fa-brands fa-python"></i>
                         <h2>Python</h2>
@@ -132,7 +132,7 @@
                     <div class="layer">
                         <h3>Google</h3>
                         <p>Data Analytics Proffesional Certificate</p>
-                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/FNNUXTBKPJUA"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/FNNUXTBKPJUA"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                     <div class="layer">
                         <h3>Google</h3>
                         <p>Business Intelligence Proffesional Certificate</p>
-                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/B64M9YMQ32VY"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/B64M9YMQ32VY"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                     <div class="layer">
                         <h3>Macqurie University</h3>
                         <p>Excel Specialization for Data Analytics and Data Visualization </p>
-                        <a href="https://www.coursera.org/account/accomplishments/specialization/6GTKAGRCZTR2"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/specialization/6GTKAGRCZTR2"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
@@ -167,10 +167,10 @@
                     <p><i class="fa-solid fa-paper-plane"></i> erramsandeep19@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i> +91 9346023531</p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/erram-sandeep-667765248/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://www.kaggle.com/erramsandeep"><i class="fa-brands fa-kaggle"></i></a>
-                        <a href="https://github.com/ERRM-SANDEEP-93460"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.instagram.com/sandeep_erram_1919/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/erram-sandeep-667765248/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.kaggle.com/erramsandeep" target="_blank"><i class="fa-brands fa-kaggle"></i></a>
+                        <a href="https://github.com/ERRM-SANDEEP-93460" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/sandeep_erram_1919/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <a href="ERRAM SANDEEP CV.pdf" download class="btn">Download CV </a>
                 </div>
