--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             <div class="projects-list">
 
 
-                <a href="https://app.powerbi.com/groups/me/reports/b570ebf3-5f8f-4cde-94ed-e9727742287a/ReportSection" target="_blank">
+                <a href="https://app.powerbi.com/links/Xofe-AWNfu?ctid=f31e3143-e8de-42b0-8609-2519299c07a2&pbi_source=linkShare" target="_blank">
                     <div>
                         <i class="fa-solid fa-chart-simple"></i>
                         <h2> Power Bi</h2>
-                        <p> Sales Insights Dashboard</p>
+                        <p> HR Analytics Dashboard</p>
                     </div>
                 </a>
                 <a href="https://public.tableau.com/app/profile/erram.sandeep/viz/NetflixAnalysisDashboard_16857781313380/Dashboard1" target="_blank">
