--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="layer">
                         <h3>Google</h3>
                         <p>Data Analytics Proffesional Certificate</p>
-                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/FNNUXTBKPJUA"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/FNNUXTBKPJUA" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                     <div class="layer">
                         <h3>Google</h3>
                         <p>Business Intelligence Proffesional Certificate</p>
-                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/B64M9YMQ32VY"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/B64M9YMQ32VY" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                     <div class="layer">
                         <h3>Macqurie University</h3>
                         <p>Excel Specialization for Data Analytics and Data Visualization </p>
-                        <a href="https://www.coursera.org/account/accomplishments/specialization/6GTKAGRCZTR2"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/specialization/6GTKAGRCZTR2" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
