--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title>Prsonal-Portfolio-Website</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/1d70844ba9.js" crossorigin="anonymous"></script>
+    <title>My Page Title</title>
+    <link rel="icon" type="image/x-icon" href="FAVICON.png">
 </head>
 
 <body>
