--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <a href="https://www.linkedin.com/in/erram-sandeep-667765248/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://www.kaggle.com/erramsandeep" target="_blank"><i class="fa-brands fa-kaggle"></i></a>
                         <a href="https://github.com/ERRM-SANDEEP-93460" target="_blank"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.instagram.com/sandeep_erram_1919/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/sandeep_gupta_93460/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <a href="ERRAM SANDEEP CV.pdf" download class="btn">Download CV </a>
                 </div>
