--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Data Analyst</p>
+                <p>Data Nerd</p>
                 <h1>Hi, I'm <span>Erram Sandeep </span></h1>
             </div>
         </div>
