--- a/index.html
+++ b/index.html
@@ -2,23 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-N1986ZN0NT"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-N1986ZN0NT');
-</script>
-    <!-- Microsoft Clarity -->
-    <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "idgiuxd97r");
-</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,8 +28,8 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Data Nerd</p>
-                <h1>Hi, I'm <span>Erram Sandeep </span></h1>
+                <p>Data Analyst</p>
+                <h1>Hi, I'm <span>Erram Sndeep </span></h1>
             </div>
         </div>
 
@@ -73,7 +56,7 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>SQL</span><br>Data Cleaning & Extract, Transform and Load(ETL) Process</li>
-                            <li><span>Python</span><br>exploratory Data Analysis (EDA) & Web Scraping, Data Visualization, Machine Learning (Basics)</li>
+                            <li><span>Python</span><br>exploratory Data Analysis (EDA) & Web Scraping, Data Visualization</li>
                             <li><span>Tableau,Power Bi</span><br>Data Visualization and Comunication, Data intigration with (ETL) Process</li>
                             <li><span>R</span><br>Statistics and Regression modelling</li>
                             <li><span>MS Office</span><br>Advamced excel formulas and Functions, MS Access, Power Point & Word</li>
@@ -83,12 +66,16 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Data Analyst &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SR Cognition Centre | Warangal | From Dec-2022 To Mar-2023</span><br>•
+                            <li><span>Real Time Analyst &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sutherland Global Services | Hyderabd | From Aug-2023</span>
+                                <br>•&nbsp;Real-Time Monitoring: Monitor contact center or operational activities in real-time using workforce management software and other tools to ensure adherence to schedules.<br>•&nbsp;Schedule Adherence: Track and
+                                analyze agent adherence to scheduled breaks, lunches, and work hours, making real-time adjustments to optimize staffing levels and maintain service levels.<br>•&nbsp;Intraday Performance Management: Analyze intraday performance
+                                metrics such as call volume, average handle time, and agent availability to identify trends and make immediate adjustments to staffing and resources as needed.<br>•&nbsp;Queue Management: Manage call queues and distribution
+                                of workload among agents in real-time to ensure equitable distribution and efficient handling of customer inquiries or operational tasks.<br>
+                            </li>
+                            <li><span>Data Analyst-Intern &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; SR Cognition Centre | Warangal | From Dec-2022 To Mar-2023</span><br>•
                                 &nbsp;Collaborated with 2 AI & ML engineers and 1 cognitive science professor to analyse and visualize<br> their experiment results (Error data) of human brain.<br> • &nbsp;Developed a visually impactful Representation
                                 in MATLAB to prove does moving object shows any effect on visual working memory recall or not with plotting Ploting the Results We have to show the outcomes.<br> • &nbsp;Contributed our statistical analysis results and
                                 our abstract for publication and to show case in the ECVP (European Conference on Visual Perception) conference.</li>
-                            <li><span>Marketing & Promotion &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Googee Properties | Hyderabd | From Nov-2022 To Dec-2022</span><br>• Marketing by
-                                talking to the customers, promoting the company by attending property exhibitions.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -115,11 +102,11 @@
             <div class="projects-list">
 
 
-                <a href="https://app.powerbi.com/links/Xofe-AWNfu?ctid=f31e3143-e8de-42b0-8609-2519299c07a2&pbi_source=linkShare" target="_blank">
+                <a href="https://app.powerbi.com/groups/me/reports/b570ebf3-5f8f-4cde-94ed-e9727742287a/ReportSection" target="_blank">
                     <div>
                         <i class="fa-solid fa-chart-simple"></i>
                         <h2> Power Bi</h2>
-                        <p> HR Analytics Dashboard</p>
+                        <p> Sales Insights Dashboard</p>
                     </div>
                 </a>
                 <a href="https://public.tableau.com/app/profile/erram.sandeep/viz/NetflixAnalysisDashboard_16857781313380/Dashboard1" target="_blank">
@@ -151,7 +138,7 @@
                     <div class="layer">
                         <h3>Google</h3>
                         <p>Data Analytics Proffesional Certificate</p>
-                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/FNNUXTBKPJUA" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/FNNUXTBKPJUA"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
@@ -160,7 +147,7 @@
                     <div class="layer">
                         <h3>Google</h3>
                         <p>Business Intelligence Proffesional Certificate</p>
-                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/B64M9YMQ32VY" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/B64M9YMQ32VY"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
@@ -169,7 +156,7 @@
                     <div class="layer">
                         <h3>Macqurie University</h3>
                         <p>Excel Specialization for Data Analytics and Data Visualization </p>
-                        <a href="https://www.coursera.org/account/accomplishments/specialization/6GTKAGRCZTR2" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://www.coursera.org/account/accomplishments/specialization/6GTKAGRCZTR2"><i class="fa-solid fa-up-right-from-square" target="_blank"></i></a>
                         <p>Veiw Certificate</p>
                     </div>
                 </div>
@@ -186,10 +173,10 @@
                     <p><i class="fa-solid fa-paper-plane"></i> erramsandeep19@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i> +91 9346023531</p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/erram-sandeep-667765248/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://www.kaggle.com/erramsandeep" target="_blank"><i class="fa-brands fa-kaggle"></i></a>
-                        <a href="https://github.com/ERRM-SANDEEP-93460" target="_blank"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.instagram.com/sandeep_gupta_93460/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/erram-sandeep-667765248/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.kaggle.com/erramsandeep"><i class="fa-brands fa-kaggle"></i></a>
+                        <a href="https://github.com/ERRM-SANDEEP-93460"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/sandeep_erram_1919/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <a href="ERRAM SANDEEP CV.pdf" download class="btn">Download CV </a>
                 </div>
