--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Data Analyst</p>
+                <p>Real Time Analyst</p>
                 <h1>Hi, I'm <span>Erram Sndeep </span></h1>
             </div>
         </div>
