--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title"> About Me </h1>
-                    <p>"Hi, my name is Erram Sandeep Iam from warangal.and I'm passionate about using technology to solve real-world <br>problems. Recently completed an internship as a Data Analyst in SR Cognition centre at SR University Warangal <br> My
-                        role involves Analysing Data by using some statistical techniques. And i need to visualize the results<br> so it can be easily understandable and I really enjoy the problem-solving aspect. In the future, I hope to continue honing
-                        my skills as a Data Analyst and eventually transition into a IT or Software role As Team Lead.</p>
+                    <p>Welcome to my portfolio! I’m Sandeep, a dedicated Real Time Analyst currently working at Sutherland Global Services. With a strong foundation in data analysis and performance optimization,<br> I thrive on turning complex data into
+                        actionable insights that drive efficiency and enhance decision-making.<br>
+                        <br>At Sutherland, I specialize in monitoring real-time performance metrics, ensuring optimal resource allocation, and collaborating with teams to improve overall productivity. My analytical skills, combined with my passion for
+                        problem-solving, enable me to identify trends and implement strategies that support business goals. <br>
+                        <br>I believe in the power of data to tell a story, and I am committed to continuous learning and professional growth in this ever-evolving field In my free time, I enjoy exploring new analytical tools and techniques, as well as
+                        sharing insights with others in the industry. <br>
+                        <br>Thank you for visiting my portfolio.I look forward to connecting and sharing ideas!</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -55,11 +59,11 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>SQL</span><br>Data Cleaning & Extract, Transform and Load(ETL) Process</li>
-                            <li><span>Python</span><br>exploratory Data Analysis (EDA) & Web Scraping, Data Visualization</li>
+                            <li><span>Advanced Excel</span><br>Look up, Index & Matching,, Advamced excel formulas and Functions, Power Querry, Power Pivot</li>
                             <li><span>Tableau,Power Bi</span><br>Data Visualization and Comunication, Data intigration with (ETL) Process</li>
+                            <li><span>SQL</span><br>Data Cleaning & Extract, Transform and Load(ETL) Process</li>
                             <li><span>R</span><br>Statistics and Regression modelling</li>
-                            <li><span>MS Office</span><br>Advamced excel formulas and Functions, MS Access, Power Point & Word</li>
+                            <li><span>Python</span><br>exploratory Data Analysis (EDA) & Web Scraping, Data Visualization</li>
                             <li><span>HTML & CSS</span><br>(BASICS)</li>
                             <li><span>Photoshop & Premier Pro</span><br>Object Selection, Content Aware Fill, Transions & Effects</li>
                         </ul>
