--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Advanced Excel</span><br>Look up, Index & Matching,, Advamced excel formulas and Functions, Power Querry, Power Pivot</li>
+                            <li><span>Advanced Excel</span><br>Look up's, Index & Matching,, Advamced excel formulas and Functions, Power Querry, Power Pivot</li>
                             <li><span>Tableau,Power Bi</span><br>Data Visualization and Comunication, Data intigration with (ETL) Process</li>
                             <li><span>SQL</span><br>Data Cleaning & Extract, Transform and Load(ETL) Process</li>
                             <li><span>R</span><br>Statistics and Regression modelling</li>
