--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title"> About Me </h1>
-                    <p>Welcome to my portfolio! I’m Sandeep, a dedicated Real Time Analyst currently working at Sutherland Global Services. With a strong foundation in data analysis and performance optimization,<br> I thrive on turning complex data into
+                    <p>Welcome to my portfolio! I'm Sandeep, a dedicated Real Time Analyst currently working at Sutherland Global Services. With a strong foundation in data analysis and performance optimization,<br> I thrive on turning complex data into
                         actionable insights that drive efficiency and enhance decision-making.<br>
                         <br>At Sutherland, I specialize in monitoring real-time performance metrics, ensuring optimal resource allocation, and collaborating with teams to improve overall productivity. My analytical skills, combined with my passion for
                         problem-solving, enable me to identify trends and implement strategies that support business goals. <br>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Advanced Excel</span><br>Look up's, Index & Matching,, Advamced excel formulas and Functions, Power Querry, Power Pivot</li>
+                            <li><span>Advanced Excel</span><br>Look up, Index & Matching,, Advamced excel formulas and Functions, Power Querry, Power Pivot</li>
                             <li><span>Tableau,Power Bi</span><br>Data Visualization and Comunication, Data intigration with (ETL) Process</li>
                             <li><span>SQL</span><br>Data Cleaning & Extract, Transform and Load(ETL) Process</li>
                             <li><span>R</span><br>Statistics and Regression modelling</li>
@@ -79,7 +79,7 @@
                             <li><span>Data Analyst-Intern &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; SR Cognition Centre | Warangal | From Dec-2022 To Mar-2023</span><br>•
                                 &nbsp;Collaborated with 2 AI & ML engineers and 1 cognitive science professor to analyse and visualize<br> their experiment results (Error data) of human brain.<br> • &nbsp;Developed a visually impactful Representation
                                 in MATLAB to prove does moving object shows any effect on visual working memory recall or not with plotting Ploting the Results We have to show the outcomes.<br> • &nbsp;Contributed our statistical analysis results and
-                                our abstract for publication and to show case in the ECVP (European Conference on Visual Perception) conference.</li>
+                                our abstract for publication and to show case in the IBRO (International Brain Research Organization) conference at europe.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
